--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
   <title>Metro Made</title>
-  <!-- Link to Google Fonts for custom fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
-  
-  <!-- Link to your CSS file (style.css) -->
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Basic styles go here, use the same as before */
+  </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
     <div class="logo">
       <img src="https://i.imgur.com/JBAZXjx.png" alt="Logo">
@@ -26,49 +23,35 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <div class="hero">
-    <h2>Shop the Latest Y2K Fashion</h2>
+    <h2>Welcome to Metro Made - Your Y2K Style Destination</h2>
   </div>
 
-  <!-- Products Section -->
-  <div class="products">
+  <!-- Product Catalog -->
+  <section class="products">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1606813904811-4e05cfc9d7b7" alt="Product Image">
+      <img src="https://via.placeholder.com/250" alt="Product 1">
       <div class="product-content">
-        <h3>Retro Sunglasses</h3>
-        <a href="#" class="btn">Shop Now</a>
+        <h3>Y2K Glasses</h3>
+        <p>$25</p>
+        <button class="add-to-cart" data-name="Y2K Glasses" data-price="25">Add to Cart</button>
       </div>
     </div>
-    <!-- Add more product blocks as needed -->
-  </div>
+    <!-- Add more products here -->
+  </section>
 
-  <!-- About Section -->
-  <div class="about">
-    <h2>About Metro Made</h2>
-    <p>Your go-to place for Y2K fashion, retro accessories, and more. Embrace nostalgia and shop the latest trends!</p>
-  </div>
+  <!-- Shopping Cart -->
+  <section class="cart">
+    <h2>Your Cart</h2>
+    <div id="cart-items"></div>
+    <p>Total: $<span id="total-price">0</span></p>
+    <button id="checkout-btn">Checkout</button>
+  </section>
 
-  <!-- Contact Section -->
-  <div class="contact">
-    <h2>Contact Us</h2>
-    <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required>
-      
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" required></textarea>
-
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-
-  <!-- Footer -->
   <footer>
-    <p>© 2025 Metro Made | All rights reserved.</p>
+    <p>&copy; 2025 Metro Made. All rights reserved.</p>
   </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
