--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
   <title>Metro Made</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
-  <style>
-    /* Basic styles go here, use the same as before */
-  </style>
+  <link rel="stylesheet" href="style.css">  <!-- Link to your CSS file -->
 </head>
 <body>
+  <!-- Header -->
   <header>
     <div class="logo">
-      <img src="https://i.imgur.com/JBAZXjx.png" alt="Logo">
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Metro Made Logo">
       Metro Made
     </div>
     <nav>
@@ -21,37 +21,58 @@
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
+    <div class="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
+  <!-- Hero Section -->
   <div class="hero">
-    <h2>Welcome to Metro Made - Your Y2K Style Destination</h2>
+    <h2>Welcome to Metro Made</h2>
   </div>
 
-  <!-- Product Catalog -->
+  <!-- Products Section -->
   <section class="products">
     <div class="product">
       <img src="https://via.placeholder.com/250" alt="Product 1">
       <div class="product-content">
-        <h3>Y2K Glasses</h3>
-        <p>$25</p>
-        <button class="add-to-cart" data-name="Y2K Glasses" data-price="25">Add to Cart</button>
+        <h3>Y2K Sunglasses</h3>
+        <p>$29.99</p>
+        <button class="btn">Add to Cart</button>
       </div>
     </div>
-    <!-- Add more products here -->
+    <!-- Repeat the above product block for more items -->
   </section>
 
-  <!-- Shopping Cart -->
-  <section class="cart">
-    <h2>Your Cart</h2>
-    <div id="cart-items"></div>
-    <p>Total: $<span id="total-price">0</span></p>
-    <button id="checkout-btn">Checkout</button>
+  <!-- About Section -->
+  <section class="about">
+    <h2>About Us</h2>
+    <p>Welcome to Metro Made. We're all about bringing back the iconic Y2K and retro vibes. Shop our collection of Y2K fashion, accessories, and more!</p>
   </section>
 
+  <!-- Contact Section -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <form id="contactForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Metro Made. All rights reserved.</p>
+    <p>&copy; 2025 Metro Made | All Rights Reserved</p>
+    <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
   </footer>
 
-  <script src="app.js"></script>
+  <!-- Link to your JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
