--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Metro Made - Stylish Y2K Fashion and Accessories">
   <title>Metro Made</title>
-  <!-- External fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
-  
-  <!-- Link to CSS -->
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="style.css">
+  <!-- Optional: You can also include Google Fonts or other resources here -->
 </head>
 <body>
-  <!-- Header Section -->
+  <!-- Main content here (logo, sections, etc.) -->
   <header>
     <div class="logo">
-      <img src="https://i.imgur.com/JBAZXjx.png" alt="Logo">
-      <span>Metro Made</span>
+      <img src="your_logo_image.png" alt="Logo"> Metro Made
     </div>
+    <!-- Add your navigation, product, and other sections here -->
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
-    <h2>Welcome to Metro Made!</h2>
+    <h2>Welcome to Metro Made</h2>
+    <!-- Add more content for hero section -->
   </section>
 
-  <!-- Navigation (example) -->
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
+  <!-- Example of a products section -->
+  <section class="products">
+    <div class="product">
+      <img src="product_image_url.jpg" alt="Product">
+      <div class="product-content">
+        <h3>Product Name</h3>
+        <p>Product Description</p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+    </div>
+  </section>
 
-  <!-- Link to JS -->
+  <!-- Link to the external JS file -->
   <script src="script.js"></script>
 </body>
 </html>
