--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Metro Made - Stylish Y2K Fashion and Accessories">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
   <title>Metro Made</title>
-  <!-- Link to the external CSS file -->
-  <link rel="stylesheet" href="style.css">
-  <!-- Optional: You can also include Google Fonts or other resources here -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Main content here (logo, sections, etc.) -->
+  <!-- Header -->
   <header>
     <div class="logo">
-      <img src="your_logo_image.png" alt="Logo"> Metro Made
+      <img src="logo.png" alt="Logo"> Metro Made
     </div>
-    <!-- Add your navigation, product, and other sections here -->
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+    <div class="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <h2>Welcome to Metro Made</h2>
-    <!-- Add more content for hero section -->
   </section>
 
-  <!-- Example of a products section -->
-  <section class="products">
-    <div class="product">
-      <img src="product_image_url.jpg" alt="Product">
-      <div class="product-content">
-        <h3>Product Name</h3>
-        <p>Product Description</p>
-        <a href="#" class="btn">Buy Now</a>
-      </div>
-    </div>
-  </section>
+  <!-- Content (Products, About, etc.) -->
+  <div class="content">
+    <!-- Product Grid, About section, etc. will go here -->
+  </div>
 
-  <!-- Link to the external JS file -->
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Metro Made. All Rights Reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
