--- a/index.html
+++ b/index.html
@@ -5,43 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
   <title>Metro Made</title>
+  <!-- External fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  
+  <!-- Link to CSS -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Header -->
+  <!-- Header Section -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Logo"> Metro Made
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-    <div class="menu-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Logo">
+      <span>Metro Made</span>
     </div>
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
-    <h2>Welcome to Metro Made</h2>
+    <h2>Welcome to Metro Made!</h2>
   </section>
 
-  <!-- Content (Products, About, etc.) -->
-  <div class="content">
-    <!-- Product Grid, About section, etc. will go here -->
-  </div>
+  <!-- Navigation (example) -->
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Shop</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Metro Made. All Rights Reserved.</p>
-  </footer>
-
+  <!-- Link to JS -->
   <script src="script.js"></script>
 </body>
 </html>
