--- a/index.html
+++ b/index.html
@@ -5,36 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
   <title>Metro Made</title>
-  <!-- External fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter&display=swap" rel="stylesheet" />
-  
-  <!-- Link to CSS -->
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Header Section -->
+  <!-- Header -->
   <header>
     <div class="logo">
-      <img src="https://i.imgur.com/JBAZXjx.png" alt="Logo">
-      <span>Metro Made</span>
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Metro Made Logo">
+      Metro Made
     </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
   <!-- Hero Section -->
   <section class="hero">
-    <h2>Welcome to Metro Made!</h2>
+    <h1>Welcome to Metro Made</h1>
   </section>
 
-  <!-- Navigation (example) -->
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
+  <!-- Product Section -->
+  <section class="products">
+    <div class="product">
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Product Image">
+      <div class="product-content">
+        <h3>Retro Sunglasses</h3>
+        <p>Stylish, iconic, and perfect for Y2K fashion lovers.</p>
+        <a href="#" class="btn">Shop Now</a>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Product Image">
+      <div class="product-content">
+        <h3>Boho Accessories</h3>
+        <p>Complete your look with bohemian-inspired jewelry.</p>
+        <a href="#" class="btn">Shop Now</a>
+      </div>
+    </div>
+    <!-- Add more products as needed -->
+  </section>
 
-  <!-- Link to JS -->
+  <!-- About Section -->
+  <section class="about">
+    <h2>About Metro Made</h2>
+    <p>Metro Made is a one-stop shop for all things Y2K fashion, retro sunglasses, and unique accessories. Whether you're looking for that perfect nostalgic vibe or a boho-chic touch, we've got you covered.</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Metro Made. All rights reserved.</p>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Service</a>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
