--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 </head>
 <body>
  
-<!-- Header -->
-<header>
-  <div class="logo">
-    <img src="https://i.imgur.com/JBAZXjx.png" alt="Metro Made Logo">
-  </div>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
-</header>
+  <!-- Header -->
+  <header>
+    <div class="logo">
+      <img src="logo.png" alt="Metro Made" />
+    </div>
+    <button class="menu-toggle" aria-label="Toggle Navigation">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
 
 
 <!-- Hero Section -->
