--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Metro Made - A stylish online shop offering Y2K fashion, retro sunglasses, boho accessories, and more. Shop the latest trends!" />
-  <title>Metro Made</title>
-  
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   
   <!-- Link to your CSS file -->
@@ -16,7 +13,8 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Metro Made Logo" />
+      <!-- Placeholder image (replace this with your actual logo file) -->
+      <img src="https://via.placeholder.com/150" alt="Metro Made Logo" />
     </div>
     <button class="menu-toggle" aria-label="Toggle Navigation">
       <span class="bar"></span>
@@ -39,7 +37,7 @@
   <!-- Product Section -->
   <section class="products">
     <div class="product">
-      <img src="https://i.imgur.com/JBAZXjx.png" alt="Retro Sunglasses" />
+      <img src="https://i.imgur.com/JBAZXjx.png" alt="Product Image">
       <div class="product-content">
         <h3>Retro Sunglasses</h3>
         <p>Stylish, iconic, and perfect for Y2K fashion lovers.</p>
@@ -53,6 +51,7 @@
         <a href="#" class="btn">Shop Now</a>
       </div>
     </div>
+    <!-- Add more products as needed -->
   </section>
 
   <!-- About Section -->
@@ -68,7 +67,7 @@
     <a href="#">Terms of Service</a>
   </footer>
 
-  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
+
