--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <!-- Placeholder image (replace this with your actual logo file) -->
-      <img src="https://via.placeholder.com/150" alt="Metro Made Logo" />
+      <img src="https://i.imgur.com/rOVvWF3.png" alt="Metro Made" />
     </div>
     <button class="menu-toggle" aria-label="Toggle Navigation">
       <span class="bar"></span>
@@ -70,4 +69,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
