--- a/index.html
+++ b/index.html
@@ -33,25 +33,29 @@
     <h1>Welcome to Metro Made</h1>
   </section>
 
-  <!-- Product Section -->
-  <section class="products">
-    <div class="product">
-      <img src="https://i.imgur.com/JBAZXjx.png" alt="Product Image">
-      <div class="product-content">
-        <h3>Retro Sunglasses</h3>
-        <p>Stylish, iconic, and perfect for Y2K fashion lovers.</p>
-        <a href="#" class="btn">Shop Now</a>
-      </div>
+ <!-- Product Section -->
+<section class="products">
+  <!-- Retro Oval Frame Fashion Glasses -->
+  <div class="product">
+    <img src="https://i.imgur.com/4T8yH3A.jpg" alt="Retro Oval Frame Fashion Glasses">
+    <div class="product-content">
+      <h3>Retro Oval Frame Fashion Glasses</h3>
+      <p>Perfect for a vintage look. These oval-shaped glasses give you a stylish, retro vibe. A must-have for any fashion lover!</p>
+      <a href="https://www.depop.com/products/metromade_shop-retro-oval-frame-fashion-glasses/manage/" class="btn">Shop Now</a>
     </div>
-    <div class="product">
-      <div class="product-content">
-        <h3>Boho Accessories</h3>
-        <p>Complete your look with bohemian-inspired jewelry.</p>
-        <a href="#" class="btn">Shop Now</a>
-      </div>
+  </div>
+
+  <!-- Boho Beaded Eyeglass Chain -->
+  <div class="product">
+    <img src="https://i.imgur.com/JBAZXjx.png" alt="Boho Beaded Eyeglass Chain">
+    <div class="product-content">
+      <h3>Boho Beaded Eyeglass Chain</h3>
+      <p>Add a bohemian touch to your look with this colorful and unique eyeglass chain. Perfect for keeping your glasses stylishly in place!</p>
+      <a href="https://www.depop.com/products/metromade_shop-boho-beaded-eyeglass-chain/manage/" class="btn">Shop Now</a>
     </div>
-    <!-- Add more products as needed -->
-  </section>
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section class="about">
