--- a/index.html
+++ b/index.html
@@ -33,28 +33,26 @@
     <h1>Welcome to Metro Made</h1>
   </section>
 
- <!-- Product Section -->
-<section class="products">
-  <!-- Retro Oval Frame Fashion Glasses -->
-  <div class="product">
-    <img src="https://i.imgur.com/4T8yH3A.jpg" alt="Retro Oval Frame Fashion Glasses">
-    <div class="product-content">
-      <h3>Retro Oval Frame Fashion Glasses</h3>
-      <p>Perfect for a vintage look. These oval-shaped glasses give you a stylish, retro vibe. A must-have for any fashion lover!</p>
-      <a href="https://www.depop.com/products/metromade_shop-retro-oval-frame-fashion-glasses/manage/" class="btn">Shop Now</a>
-    </div>
+<!-- First Product: Retro Oval Frame Fashion Glasses -->
+<div class="product">
+  <img src="https://i.ibb.co/tT9C96WD/bdb1f3fc-a666-4d8c-a49c-c5461733aea4.webp" alt="Retro Oval Frame Fashion Glasses">
+  <div class="product-content">
+    <h3>Retro Oval Frame Fashion Glasses</h3>
+    <p>Iconic Y2K style glasses, perfect for your trendy, retro look. Available in multiple colors.</p>
+    <a href="https://www.depop.com/products/metromade_shop-retro-oval-frame-fashion-glasses/manage/" class="btn">Shop Now</a>
   </div>
+</div>
 
-  <!-- Boho Beaded Eyeglass Chain -->
-  <div class="product">
-    <img src="https://i.imgur.com/JBAZXjx.png" alt="Boho Beaded Eyeglass Chain">
-    <div class="product-content">
-      <h3>Boho Beaded Eyeglass Chain</h3>
-      <p>Add a bohemian touch to your look with this colorful and unique eyeglass chain. Perfect for keeping your glasses stylishly in place!</p>
-      <a href="https://www.depop.com/products/metromade_shop-boho-beaded-eyeglass-chain/manage/" class="btn">Shop Now</a>
-    </div>
+<!-- Second Product (Replace this with the new product details) -->
+<div class="product">
+  <img src="URL_OF_YOUR_SECOND_PRODUCT_IMAGE" alt="Second Product Name">
+  <div class="product-content">
+    <h3>Second Product Name</h3>
+    <p>Description of the second product goes here.</p>
+    <a href="URL_OF_YOUR_SECOND_PRODUCT_ON_DEPOP" class="btn">Shop Now</a>
   </div>
-</section>
+</div>
+
 
 
   <!-- About Section -->
