--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
     <h1>Welcome to Metro Made</h1>
   </section>
 
-<!-- First Product: Retro Oval Frame Fashion Glasses -->
-<div class="product">
-  <img src="https://i.ibb.co/tT9C96WD/bdb1f3fc-a666-4d8c-a49c-c5461733aea4.webp" alt="Retro Oval Frame Fashion Glasses">
-  <div class="product-content">
-    <h3>Retro Oval Frame Fashion Glasses</h3>
-    <p>Iconic Y2K style glasses, perfect for your trendy, retro look. Available in multiple colors.</p>
-    <a href="https://www.depop.com/products/metromade_shop-retro-oval-frame-fashion-glasses/manage/" class="btn">Shop Now</a>
+<section class="products">
+  <div class="product">
+    <img src="https://i.ibb.co/tT9C96WD/bdb1f3fc-a666-4d8c-a49c-c5461733aea4.webp" alt="Retro Oval Frame Fashion Glasses" />
+    <div class="product-content">
+      <h3>Retro Oval Frame Fashion Glasses</h3>
+      <p>Retro oval fashion glasses. Bold and unique, perfect for any Y2K style lover!</p>
+      <p><strong>Price:</strong> $25.00</p>
+      <a href="#" class="btn">Add to Cart</a> <!-- You can replace this with a shopping cart functionality later -->
+    </div>
   </div>
-</div>
-
-<!-- Second Product (Replace this with the new product details) -->
-<div class="product">
-  <img src="URL_OF_YOUR_SECOND_PRODUCT_IMAGE" alt="Second Product Name">
-  <div class="product-content">
-    <h3>Second Product Name</h3>
-    <p>Description of the second product goes here.</p>
-    <a href="URL_OF_YOUR_SECOND_PRODUCT_ON_DEPOP" class="btn">Shop Now</a>
+  <div class="product">
+    <img src="https://i.ibb.co/tT9C96WD/bdb1f3fc-a666-4d8c-a49c-c5461733aea4.webp" alt="Boho Beaded Eyeglass Chain" />
+    <div class="product-content">
+      <h3>Boho Beaded Eyeglass Chain</h3>
+      <p>Complete your style with this boho-chic beaded eyeglass chain.</p>
+      <p><strong>Price:</strong> $15.00</p>
+      <a href="#" class="btn">Add to Cart</a> <!-- Same for this product -->
+    </div>
   </div>
-</div>
+</section>
 
 
 
