--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="product-content">
       <h3>Retro Oval Frame Fashion Glasses</h3>
       <p>Retro oval fashion glasses. Bold and unique, perfect for any Y2K style lover!</p>
-      <p><strong>Price:</strong> $25.00</p>
+      <p><strong>Price:</strong> £20.00 </p>
       <a href="#" class="btn">Add to Cart</a> <!-- You can replace this with a shopping cart functionality later -->
     </div>
   </div>
