--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
   </div>
 </section>
 
+  <!-- Product 1 Section on Homepage -->
+<div class="product">
+  <a href="product1.html">
+    <img src="https://i.ibb.co/tT9C96WD/bdb1f3fc-a666-4d8c-a49c-c5461733aea4.webp" alt="Retro Oval Frame Fashion Glasses" />
+    <div class="product-content">
+      <h3>Retro Oval Frame Fashion Glasses</h3>
+      <p>Stylish, iconic, and perfect for Y2K fashion lovers.</p>
+    </div>
+  </a>
+</div>
+
+<!-- Product 2 Section on Homepage -->
+<div class="product">
+  <a href="product2.html">
+    <img src="path_to_image_of_product_2" alt="Product 2" />
+    <div class="product-content">
+      <h3>Product 2 Name</h3>
+      <p>Product 2 Description</p>
+    </div>
+  </a>
+</div>
+
 
 
   <!-- About Section -->
